--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -9,4 +9,82 @@ body {
   padding: 0;
 }
 
-/* Add styles here! */
+body {
+  color: hsl(0deg, 0%, 40%);
+}
+
+.max-width-wrapper {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 850px;
+}
+
+header {
+  margin-top: 140px;
+  padding: 0 20px;
+}
+
+header .max-width-wrapper {
+  width: 520px;
+}
+
+h1 {
+  color: hsl(0deg, 0%, 0%);
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+h2 {
+  color: hsl(0deg, 0%, 0%);
+  font-size: 1rem;
+}
+
+.title {
+  margin-bottom: 40px;
+}
+
+.intro-chunk {
+  max-width: 300px;
+
+  margin-bottom: 50px;
+}
+
+.intro-chunk p {
+  font-size: 1rem;
+  line-height: 24px;
+}
+
+.indented-heading {
+  border-bottom: 4px solid hsl(45deg, 100%, 40%);
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 10px 30px;
+  margin-left: -29px;
+  margin-top: -11px;
+  min-width: 240px;
+  max-width: 285px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  padding: 0 20px;
+}
+
+main .max-width-wrapper {
+  border-top: 4px solid hsl(0deg, 0%, 40%);
+  background-color: hsl(0deg, 0%, 50%);
+  padding: 60px 0;
+}
+
+.card {
+  width: 520px;
+  max-width: 520px;
+
+  min-width: 500px;
+  background-color: hsl(0deg, 0%, 100%);
+  margin: 0 auto;
+  padding: 20px;
+  line-height: 20px;
+}
